<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:layout_marginBottom="0dp"
        android:text="@string/collection"
        android:textSize="@dimen/large_text" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.6"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_date_range_black_24px"
                android:text="@string/day"
                android:textSize="@dimen/medium_text" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/day_of_week_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.4" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.6"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_frequency_black_24px"
                android:text="@string/frequency"
                android:textSize="@dimen/medium_text" />


            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/frequency_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.4" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/alarm_reminder"
        android:textSize="@dimen/large_text" />


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.6"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_access_time_black_24px"
                android:text="@string/time"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/textReminderTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.4"
                android:text="10:10am"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.6"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_repeat_black_24px"
                android:text="@string/repeat"
                android:textSize="@dimen/medium_text" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0.4"
                android:orientation="horizontal">


                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>